finish lecture 2 (on lecture 3)
